src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-321.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typevb=n,.3,qb\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typevb=n,.3,qb"
        locs:
          directive: "#units"
        options:
          - INVALID:
              do_not_average:
                INVALID: qb
                issues:
                  - 0
              is_corrected: false
              loc: "typevb=n,.3,qb"
              locs:
                do_not_average: qb
                is_corrected: n
                option: typevb
                tolerance: ".3"
              option: BacksightInclinationType
              tolerance:
                unit: Degrees
                value: 0.3
        type: UnitsDirective
issues:
  - code: EINVALIDDONOTAVERAGE
    loc: qb
    message: Invalid do not average flag
    severity: Error
