src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-322.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=2:\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incab=2:"
        locs:
          directive: "#units"
        options:
          - INVALID:
              correction: "2:"
              loc: "incab=2:"
              locs:
                correction: "2:"
                option: incab
              option: BacksightAzimuthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGMINUTES
    loc: ""
    message: Missing minutes
    severity: Error
