src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-326.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=2:3:5\")"
---
items:
  - loc: "#units incab=2:3:5"
    locs:
      directive: "#units"
    options:
      - correction:
          degrees: 2
          locs:
            degrees: "2"
            minutes: "3"
            seconds: "5"
          minutes: 3
          seconds: 5
          unit: Degrees
          value: 2.051388888888889
        loc: "incab=2:3:5"
        locs:
          correction: "2:3:5"
          option: incab
        option: BacksightAzimuthCorrection
    type: UnitsDirective
