src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-33.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units d=meters\")"
---
items:
  - loc: "#units d=meters"
    locs:
      directive: "#units"
    options:
      - loc: d=meters
        locs:
          option: d
          unit: meters
        option: PrimaryDistanceUnit
        unit: Meters
    type: UnitsDirective
