src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-330.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incab=360\")"
---
items:
  - loc: "#units incab=360"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Degrees
          value: 360
        loc: incab=360
        locs:
          correction: "360"
          option: incab
        option: BacksightAzimuthCorrection
    type: UnitsDirective
